@@ -3,7 +3,8 @@
 #' Takes two formulas for synthesizing two target sounds with
 #' \code{\link{soundgen}} and produces a number of intermediate forms (morphs),
 #' attempting to go from one target sound to the other in a specified number of
-#' equal steps.
+#' equal steps. Normally you will want to set \code{temperature} very low; the
+#' \code{tempEffects} argument is not supported.
 #' @param formula1,formula2 lists of parameters for calling
 #'   \code{\link{soundgen}} that produce the two target sounds between which
 #'   morphing will occur. Character strings containing the full call to soundgen
@@ -12,8 +13,8 @@
 #' @param playMorphs if TRUE, the morphs will be played
 #' @param savePath if it is the path to an existing directory, morphs will be
 #'   saved there as individual .wav files (defaults to NA)
-#' @param samplingRate sampling rate of output, Hz. NB: must be the same as in
-#'   \code{formula1} and \code{formula2}!
+#' @param samplingRate sampling rate of output, Hz. NB: overrides the values in
+#'   \code{formula1} and \code{formula2}
 #' @return A list of two sublists (\code{$formulas} and \code{$sounds}), each
 #'   of length \code{nMorphs}. For ex., the formula for the second hybrid is
 #'   \code{m$formulas[[2]]}, and the waveform is \code{m$sounds[[2]]}
@@ -50,6 +51,34 @@
 #'     noise = data.frame(time = c(0, 300, 440), value = c(-35, -25, -65)),
 #'     mouth = c(.4, .5), rolloffNoise = -5, attackLen = 30)',
 #'   nMorphs = 8, playMorphs = playback
+#' )
+#'
+#' # from scream_010 to moan_515b
+#' # (see online demos at http://cogsci.se/soundgen/humans/humans.html)
+#' m = morph(
+#'   formula1 = "soundgen(
+#'     sylLen = 490,
+#'     pitch = list(time = c(0, 80, 250, 370, 490),
+#'     value = c(1000, 2900, 3200, 2900, 1000)),
+#'     rolloff = c(-5, 0, -25), rolloffKHz = 0,
+#'     temperature = 0.001,
+#'     nonlinBalance = 100, subDep = 0,
+#'     jitterDep = c(.5, 1, 0), shimmerDep = c(5, 15, 0),
+#'     formants = c(1100, 2300, 3100, 4000, 5300, 6200),
+#'     mouth = c(.3, .5, .6, .5, .3))",
+#'   formula2 = "soundgen(sylLen = 520,
+#'     pitch = c(300, 310, 300),
+#'     ampl = c(0, -30),
+#'     temperature = 0.001, rolloff = c(-18, -25),
+#'     nonlinBalance = 100, jitterDep = .05, shimmerDep = 2, subDep = 0,
+#'     formants = list(f1 = c(700, 900),
+#'       f2 = c(1600, 1400),
+#'       f3 = c(3600, 3500), f4 = c(4300, 4200)),
+#'     mouth = c(.5, .3),
+#'     noise = data.frame(time = c(0, 400, 660),
+#'     value = c(-20, -10, -60)),
+#'     rolloffNoise = c(-5, -15))",
+#'  nMorphs = 5, playMorphs = playback
 #' )
 #' }
 morph = function(formula1,
@@ -122,6 +151,19 @@ morph = function(formula1,
                    length.out = max(2, length(formula2$noise))),
         value = formula2$noise)
     }
+  }
+
+  # set pitchSamplingRate to the higher value
+  formula1$samplingRate = formula2$samplingRate = samplingRate
+  if (is.numeric(formula1$pitchSamplingRate) |
+      is.numeric(formula2$pitchSamplingRate)) {
+    mps = max(formula1$pitchSamplingRate, formula2$pitchSamplingRate)
+    formula1$pitchSamplingRate = formula2$pitchSamplingRate = mps
+  }
+
+  # ascertain that the formulas are not identical
+  if (identical(formula1[order(names(formula1))], formula2[order(names(formula2))])) {
+    stop('Nothing to morph!')
   }
 
   # which pars are different from the defaults of soundgen()?
@@ -230,6 +272,14 @@ morph = function(formula1,
         f2$formantsNoise[[l]]$freq = log(f2$formantsNoise[[l]]$freq)
       }
     }
+  }
+
+  # expand attackLen
+  if (length(formula1$attackLen) == 2 & length(formula2$attackLen) < 2) {
+    formula2$attackLen = rep(formula2$attackLen, 2)
+  }
+  if (length(formula2$attackLen) == 2 & length(formula1$attackLen) < 2) {
+    formula1$attackLen = rep(formula1$attackLen, 2)
   }
 
   # expand vectorized pars, if any, to anchors
